[package]
name = "hanami-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.2"
rosu-pp = "1.1.0"
rosu-v2 = "0.9.0"
num-format = "0.4.4"
chrono = "0.4.38"
rusqlite = "0.31.0"
reqwest = "0.12.5"
regex = "1.10.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
