[package]
name = "hanami-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
rosu-pp = "1.1.0"
rosu-v2 = "0.9.0"
num-format = "0.4.4"
chrono = "0.4.38"
reqwest = "0.12.7"
regex = "1.10.6"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.0", features = ["sqlite", "json", "runtime-tokio"] }
